--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,8 +7,9 @@ plugins {
 
 android {
     namespace = "com.example.quiz_ai"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    compileSdk = 34  // Update this to the latest stable version
+
+    ndkVersion = "23.1.7779620" // Make sure this is compatible with your setup (optional)
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -16,29 +17,37 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = "1.8"
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
+        // Specify a unique Application ID
         applicationId = "com.example.quiz_ai"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        // Set the minimum SDK version
+        minSdkVersion 21  // Set to at least 21 to support modern Flutter plugins
+        // Set the target SDK version to the latest available version
+        targetSdkVersion 34
+        versionCode 1  // Increment for each new release
+        versionName "1.0.0"  // Update this for each release
     }
 
     buildTypes {
         release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
+            // Add your signing config for release build or keep debug for testing
             signingConfig = signingConfigs.debug
+            // Enable code shrinking, obfuscation, and optimization in release mode (optional)
+            minifyEnabled false
+            shrinkResources false
+            // ProGuard rules (optional for obfuscation)
+            // proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 flutter {
-    source = "../.."
+    source = "../.."  // Points to the root Flutter directory
+}
+
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
