--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,19 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext.kotlin_version = '1.8.0'  // Kotlin version, adjust as necessary
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.0.2"  // Android Gradle Plugin version
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"  // Kotlin plugin
+        classpath "com.google.gms:google-services:4.3.14"  // If you are using Firebase or Google services
+        // Add other classpath dependencies as needed
+    }
+}
+
 allprojects {
     repositories {
         google()
@@ -6,13 +22,16 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
+
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
+
 subprojects {
     project.evaluationDependsOn(":app")
 }
 
+// Cleaning the build directory
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
