--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.1
+  image_picker: ^0.8.4+4
+  file_picker: ^5.2.2
 
 # Development dependencies
 dev_dependencies:
@@ -25,6 +27,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^2.0.0
   flutter_launcher_icons: ^0.14.1
+
 
 # Flutter launcher icons configuration
 flutter_icons:
