--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.4-all.zip
+
 org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
