--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ version: 1.0.0+1
 
 # SDK environment
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.12.0 <4.0.0'
 
 # Dependencies for the Flutter app
 dependencies:
@@ -23,6 +23,12 @@ dependencies:
   font_awesome_flutter: ^10.1.0
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
+  shelf: ^1.3.0
+  shelf_router: ^1.1.0
+  http: ^1.2.2
+  url_launcher: ^6.3.0
+
+
 
 
 # Development dependencies
