--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.3.0
   html_unescape: ^2.0.0
+  cloud_firestore: ^5.4.3
+  sign_in_with_apple: ^6.1.3
 
 
 
