--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,8 +18,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_sign_in: ^6.2.1
   flutter_facebook_auth: ^7.1.1
-  image_picker: ^0.8.4+4
-  file_picker: ^5.2.2
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
   font_awesome_flutter: ^10.1.0
   firebase_core: ^3.6.0
   firebase_auth: ^5.3.1
@@ -28,9 +28,13 @@ dependencies:
   http: ^1.2.2
   url_launcher: ^6.3.0
   html_unescape: ^2.0.0
-  cloud_firestore: ^5.4.3
+  cloud_firestore: ^5.4.4
   sign_in_with_apple: ^6.1.3
   excel: ^4.0.6
+  pdf: ^3.11.1
+  pdf_render: ^1.4.12
+  image: ^4.2.0
+  flutter_tesseract_ocr: ^0.4.26
 
 
 
@@ -39,7 +43,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
   flutter_launcher_icons: ^0.14.1
 
 
