--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,9 +73,12 @@ flutter:
     - assets/facebook.png
     - assets/quiz.png
 
+
+
+
   # Fonts can be added here if needed
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
